fixed some layout issues
Former-commit-id: 51defb90933de00dc740df98441fc961e90ee2a0

--- a/intermine/webapp/main/resources/webapp/css/toolbar.css
+++ b/intermine/webapp/main/resources/webapp/css/toolbar.css
@@ -129,7 +129,7 @@ ul#button_bar {
     margin:-3px 0 0;
     font-size:0.9em;
     background-color:#FFF;/*#CAACD2;*/
-    text-align:left;
+    text-align:left
     /*color:#FFF;*/
 }
 .tool_bar_item hr {
